# ted

./: .gitignore  .gitmodules  CMakeLists.txt  generate_project_files.bat  test_debug.bat  test_release.bat  todo.txt
shaders/: cursor.fs  cursor.vs  font.fs  font.vert  font.vs  text_2d.fs  text_2d.vs  text_batch_2d.fs  text_batch_2d.vs
src/: CMakeLists.txt  arena.h  file.cpp  file.h  file_reader.cpp  file_reader.h  font.cpp  font.h  gap_buffer.cpp  gap_buffer.h  gl.cpp  gl.h  main.cpp  matrix.cpp  matrix.h  memory.cpp  memory.h  memory_eater.h  my_font.h  pch.h  profile.h  quat.cpp  quat.h  settings.cpp  settings.h  ted.cpp  ted.h  vector.cpp  vector.h
